# Trade-system_v1

./: .env.example  .gitignore  Makefile  README.md  commands.txt  pyproject.toml
News Fetcher/: data_fetcher.py  main.py
News Fetcher/data/run_2024-04-01 01:07/: metadata.json  (+4 more)
configs/: default.yaml  flag_overrides.yaml  playbook_v2.yaml  universe_100.yaml  universe_core.yaml  universe_liquid.yaml  universe_master.yaml
data/ledger/: predictions.jsonl
docs/: COMMANDS.md  COMPENDIUM.md
future_predict/2026-04-30/: equity_log.parquet  forecast.json
future_predict/2026-05-02/: equity_log.parquet  forecast.json
models_store/: README.md  manifest.json
models_store/intervals/: meta.json
scripts/: dashboard.py  desk.py  invest_desk.py  prefect_flow.py
src/trading_system/: __init__.py  cli.py  config.py
tests/: conftest.py
tests/backtest_regression/: golden_ma_crossover.json  test_golden.py
tests/data_quality/: test_ohlcv_quality.py
tests/integration/: test_end_to_end.py
tests/leakage_tests/: test_leakage.py
tests/unit/: test_allocate.py  test_backfill_util.py  test_backtest.py  test_bounds_sizing.py  test_decision.py  test_features.py  test_flags.py  test_gdelt_features.py  test_intervals.py  test_invest_plan.py  test_ledger.py  test_macro_features.py  test_metrics.py  test_news_dedup.py  test_nonlinear.py  test_paper_broker.py  test_playbook.py  test_rag.py  test_reserve_compute.py  test_risk.py  test_sec_features.py  test_sequence.py  test_sparse_signals.py  test_text_features.py  test_train_screen.py  test_validation.py  test_wiki_features.py  test_wiki_ingest.py
(+130 files in other folders)
