[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-system"
version = "0.1.0"
description = "Local-first research and paper-trading system."
requires-python = ">=3.11"
authors = [{ name = "Research" }]
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=15",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "shap>=0.45",
    "yfinance>=0.2.40",
    "requests>=2.32",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "PyYAML>=6.0",
    "python-dateutil>=2.9",
    "tqdm>=4.66",
    "rich>=13.7",
    "typer>=0.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "streamlit>=1.36",
    "mlflow>=2.14",
    "great-expectations>=0.18",
    "evidently>=0.4.30",
    "prefect>=2.19",
    "fredapi>=0.5",
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipykernel>=6.29",
]
backtest = [
    "vectorbt>=0.26",
    "backtesting>=0.3.3",
]

[project.scripts]
ts = "trading_system.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_system"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: requires network/external data",
    "slow: long-running tests",
]
